[package]
name = "entry_manager"
version = "0.1.0"
edition = "2021"
authors = ["Jan Wendler"]
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.19.0", features = ["persistence"] }
egui = "0.19.0"
image = "0.24.5"
serde = { version = "1", features = ["derive"] }
tracing-subscriber = "0.3"

[build-dependencies]
winres = "0.1.12"
